--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
     <!-- custom css-->
     <link rel="stylesheet" href="CSS/style.css" />
-    <link rel="icon" type="image/x-icon" href="Image/redux-logo-24.png" />
+    <link rel="icon" type="image/x-icon" href="assets/Image/redux-logo-24.png" />
   </head>
   <body>
     <!-- header design-->
     <header class="header">
       <div class="header-logo">
         <i class="bx bxl-redux"></i>
-        <a href="#" class="logo">Portfolio </a>
+        <a href="#" class="logo">Portfolio</a>
       </div>
       <i class="bx bx-menu" id="menu-icon"></i>
       <nav class="navbar">
@@ -25,8 +25,8 @@
         <a href="#about">About</a>
         <a href="#education">Education</a>
         <a href="#skills">Skills</a>
-        <a href="#services">Services</a>
         <a href="#portfolio">Projects</a>
+        <a href="#certificates">Certificates</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -36,33 +36,49 @@
       <div class="home-content">
         <h3>Hello, It's Me</h3>
         <h1>Minh Trinh</h1>
-        <h3>And I'am a <span>Data Scientist</span></h3>
+        <h3>And I'am a <span>Data Scientist, AI/ML Engineer</span></h3>
         <div class="social-media">
           <a href="https://www.facebook.com/minh.trinhngoc.965" target="_blank"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/trinhminh_2309/" target="_blank"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/trinhminh_2309" target="_blank"><i class="bx bxl-instagram"></i></a>
           <a href="https://github.com/trinhminhds" target="_blank"><i class="bx bxl-github"></i></a>
-          <a href="#" target="_blank"><i class="bx bxl-linkedin-square"></i></a>
+          <a href="https://www.linkedin.com/in/minh-trinh-1007b3273" target="_blank"
+            ><i class="bx bxl-linkedin-square"></i
+          ></a>
         </div>
-        <a href="#" class="btn">Download CV</a>
+        <a href="assets/MinhTrinh_Resume.pdf" target="_blank" class="btn">Download CV</a>
       </div>
-      <div class="home-img"><img src="Image/CaNhan.jpg" alt="" /></div>
+      <div class="home-img"><img src="assets/Image/CaNhan.jpg" alt="" /></div>
     </section>
 
     <!-- About section design -->
     <section class="about" id="about">
-      <div class="about-img">
-        <img src="Image/CaNhan.jpg" alt="" />
-      </div>
+      <!-- <div class="about-img">
+        <img src="assets/Image/CaNhan.jpg" alt="" />
+      </div> -->
       <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
-        <h3>Data Scientist</h3>
+        <!-- <h3>Data Scientist</h3> -->
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor earum corporis, fugiat, nisi harum, illum
-          inventore alias perferendis consequatur minus voluptatum minima aperiam accusantium odit temporibus asperiores
-          aspernatur ea hic tenetur. Esse harum in tenetur ullam atque debitis quod fugit assumenda, obcaecati, maiores
-          error numquam repellendus.
+          Experienced Data Scientist, contributing to the development of data-driven solutions at XYZ Corp, specializing
+          in predictive analytics and data visualization. I focus on crafting clean and efficient code for various
+          components of the data analysis pipeline, particularly in data wrangling and feature engineering. Also
+          evaluating model performance using key metrics like accuracy and precision, ensuring optimal computational
+          efficiency. Instrumental in integrating machine learning models into production systems, emphasizing seamless
+          deployment and scalability while optimizing for inference speed and memory efficiency. Recognized for
+          identifying and addressing performance bottlenecks, enhancing system speed and resource utilization. Previous
+          achievements include leading the development of a predictive maintenance model at ABC Inc., resulting in a
+          significant reduction in downtime. Additionally, contributed to the creation of a data visualization tool for
+          real-time analytics, and developed a recommendation system using collaborative filtering techniques.
+          Proficient in data analysis frameworks, machine learning algorithms, clean code writing, and effective
+          integration and deployment practices, with a strong emphasis on business logic development and software
+          optimization.
+          <br />
+          <br />
+          Holds a Bachelor's degree in Big Data and proficient in Python, R, C++, SQL, Pandas, and various data analysis
+          tools. Skilled in data wrangling, exploratory data analysis, feature engineering, machine learning techniques,
+          and model deployment.
         </p>
-        <a href="#" class="btn">Read More</a>
+        <!-- <a href="#" class="btn">Read More</a> -->
       </div>
     </section>
 
@@ -75,35 +91,10 @@
           <div class="education-box">
             <div class="education-content">
               <div class="content">
-                <div class="year"><i class="bx bx-calendar"></i>2022 - 2025</div>
+                <div class="year"><i class="bx bx-calendar"></i>Oct 2022 - May 2025</div>
                 <h3>Gia Dinh University</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, labore cumque nam quam tempora fuga.
-                  Aliquam officiis sapiente inventore autem, aspernatur quisquam maiores odit eligendi nesciunt
-                  consequatur.
-                </p>
-              </div>
-            </div>
-            <div class="education-content">
-              <div class="content">
-                <div class="year"><i class="bx bx-calendar"></i>2022 - 2025</div>
-                <h3>Gia Dinh University</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, labore cumque nam quam tempora fuga.
-                  Aliquam officiis sapiente inventore autem, aspernatur quisquam maiores odit eligendi nesciunt
-                  consequatur.
-                </p>
-              </div>
-            </div>
-            <div class="education-content">
-              <div class="content">
-                <div class="year"><i class="bx bx-calendar"></i>2022 - 2025</div>
-                <h3>Gia Dinh University</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, labore cumque nam quam tempora fuga.
-                  Aliquam officiis sapiente inventore autem, aspernatur quisquam maiores odit eligendi nesciunt
-                  consequatur.
-                </p>
+                <p>Bachelor of Information Technology, Big Data</p>
+                <p>GPA: 3.2 / 4.0</p>
               </div>
             </div>
           </div>
@@ -114,23 +105,20 @@
           <div class="education-box">
             <div class="education-content">
               <div class="content">
-                <div class="year"><i class="bx bx-calendar"></i>2022 - 2025</div>
-                <h3>Gia Dinh University</h3>
+                <div class="year"><i class="bx bx-calendar"></i>Mar 2023 - Mar 2024</div>
+                <h3>Python coding Tutor, Freelance</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, labore cumque nam quam tempora fuga.
-                  Aliquam officiis sapiente inventore autem, aspernatur quisquam maiores odit eligendi nesciunt
-                  consequatur.
-                </p>
-              </div>
-            </div>
-            <div class="education-content">
-              <div class="content">
-                <div class="year"><i class="bx bx-calendar"></i>2022 - 2025</div>
-                <h3>Gia Dinh University</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, labore cumque nam quam tempora fuga.
-                  Aliquam officiis sapiente inventore autem, aspernatur quisquam maiores odit eligendi nesciunt
-                  consequatur.
+                  • Guide students of varying skill levels through core Python programming concepts, including data
+                  structures, functions, and object-oriented programming, tailoring instruction to individual learning
+                  styles.
+                  <br />
+                  • Designanddeliver customized lesson plans, hands-on programming exercises, and data science and data
+                  analytics projects to help students develop problem-solving skills and reinforce fundamental
+                  programming knowledge.
+                  <br />
+                  • Provide real-world examples and project-based learning, covering topics such as data analysis, web
+                  scraping, and machine learning fundamentals, to ensure a comprehensive understanding of Python
+                  applications.
                 </p>
               </div>
             </div>
@@ -144,11 +132,16 @@
       <h2 class="heading">My <span>Skills</span></h2>
       <div class="skills-row">
         <div class="skills-column">
-          <h3 class="title">Coding Skills</h3>
+          <h3 class="title">Programming</h3>
           <div class="skills-box">
             <div class="skills-content">
               <div class="progress">
                 <h3>Python <span>90%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+
+              <div class="progress">
+                <h3>R <span>50%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
@@ -158,7 +151,7 @@
               </div>
 
               <div class="progress">
-                <h3>Pandas <span>70%</span></h3>
+                <h3>C++ <span>40%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
             </div>
@@ -166,62 +159,30 @@
         </div>
         <!--============================== Skills column Professional ==============================-->
         <div class="skills-column">
-          <h3 class="title">Professional Skills</h3>
+          <h3 class="title">Libraries & Tools</h3>
           <div class="skills-box">
             <div class="skills-content">
               <div class="progress">
-                <h3>Data Scientist <span>90%</span></h3>
+                <h3>Tensorflow <span>40%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
               <div class="progress">
-                <h3>Data Engineer <span>80%</span></h3>
+                <h3>Sci-kit Learn <span>60%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
               <div class="progress">
-                <h3>Data Analyst <span>70%</span></h3>
+                <h3>Pandas <span>70%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+
+              <div class="progress">
+                <h3>Numpy <span>60%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- services section design -->
-    <section name="services" id="services">
-      <h2 class="heading">Our <span>Services</span></h2>
-
-      <div class="services-container">
-        <div class="services-box">
-          <i class="bx bx-code"></i>
-          <h3>Data Scientist</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat minus ipsa tempora! Eos quidem corrupti
-            distinctio.
-          </p>
-          <a href="#" class="btn">Read More</a>
-        </div>
-
-        <div class="services-box">
-          <i class="bx bxs-analyse"></i>
-          <h3>Data Analyst</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat minus ipsa tempora! Eos quidem corrupti
-            distinctio.
-          </p>
-          <a href="#" class="btn">Read More</a>
-        </div>
-
-        <div class="services-box">
-          <i class="bx bx-cog"></i>
-          <h3>Data Engineer</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat minus ipsa tempora! Eos quidem corrupti
-            distinctio.
-          </p>
-          <a href="#" class="btn">Read More</a>
         </div>
       </div>
     </section>
@@ -231,7 +192,50 @@
       <h2 class="heading">Latest <span>Project</span></h2>
       <div class="portfolio-container">
         <div class="portfolio-box">
-          <img src="Image/portfolio1.jpg" alt="" />
+          <img src="assets/Image/portfolio1.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>Animal Species Classification</h4>
+            <p>
+              About This project leverages a Convolutional Neural Network (CNN) for 90 different animals image
+              classification. The model is trained on a custom dataset using the Tensorflow/Keras API.
+            </p>
+            <a href="https://github.com/trinhminhds/90_Different_Animals_Image_Classification" target="_blank"
+              ><i class="bx bx-link-external"></i
+            ></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="assets/Image/portfolio2.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>Handwritten Digit Recognition System</h4>
+            <p>
+              This project focuses on building a system that can recognize handwritten digits from images or handwritten
+              digits entered on a screen. The model is trained on the MNIST dataset using the SVM.
+            </p>
+            <a href="https://github.com/trinhminhds/Handwritten_Digit_Recognition" target="_blank"
+              ><i class="bx bx-link-external"></i
+            ></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="assets/Image/portfolio3.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>AI-Generated Text Detection</h4>
+            <p>
+              This project is an AI-generated text detection system, utilizing deep learning models to classify essays
+              as either real or fake. The project is built on the DeBERTaV3 model and Keras-NLP, with data sourced from
+              Kaggle and external datasets.
+            </p>
+            <a href="https://github.com/trinhminhds/LLM_Detect_AI_Generated_Text"
+              ><i class="bx bx-link-external"></i
+            ></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="assets/Image/portfolio4.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Data Scientist</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -240,7 +244,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="Image/portfolio2.jpg" alt="" />
+          <img src="assets/Image/portfolio5.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Data Scientist</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -249,40 +253,27 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="Image/portfolio3.jpg" alt="" />
+          <img src="assets/Image/portfolio6.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Data Scientist</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
+      </div>
+    </section>
 
-        <div class="portfolio-box">
-          <img src="Image/portfolio4.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Data Scientist</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
-          </div>
-        </div>
-
-        <div class="portfolio-box">
-          <img src="Image/portfolio5.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Data Scientist</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
-          </div>
-        </div>
-
-        <div class="portfolio-box">
-          <img src="Image/portfolio6.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Data Scientist</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
-          </div>
-        </div>
+    <!-- Certificates section design -->
+    <section class="certificates" id="certificates">
+      <!-- <div class="about-img">
+        <img src="assets/Image/CaNhan.jpg" alt="" />
+      </div> -->
+      <div class="certificates-content">
+        <h2 class="heading">Certificates</h2>
+        <a
+          href="https://www.coursera.org/account/accomplishments/specialization/QE8Z2EUQQQZ7?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=prof"
+          >Coursera-IBM Data Science</a
+        >
       </div>
     </section>
 
