update index.html and css

--- a/index.html
+++ b/index.html
@@ -268,11 +268,20 @@
       <!-- <div class="about-img">
         <img src="assets/Image/CaNhan.jpg" alt="" />
       </div> -->
+      <h2 class="heading">Certificates</h2>
       <div class="certificates-content">
-        <h2 class="heading">Certificates</h2>
         <a
           href="https://www.coursera.org/account/accomplishments/specialization/QE8Z2EUQQQZ7?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=prof"
+          target="_blank"
           >Coursera-IBM Data Science</a
+        >
+        <br />
+        <a href="https://www.coursera.org/account/accomplishments/verify/2I8ZZ5NV7OTM" target="_blank"
+          >Linear Algebra for Machine Learning and Data Science</a
+        >
+        <br />
+        <a href="https://www.coursera.org/account/accomplishments/verify/DTA2YVIVGW4X" target="_blank"
+          >Calculus for Machine Learning and Data Science</a
         >
       </div>
     </section>
