--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <div class="header-logo">
         <i class="bx bxl-redux"></i>
-        <a href="#" class="logo">Portfolio</a>
+        <!-- <a href="#" class="logo">Portfolio</a> -->
       </div>
       <i class="bx bx-menu" id="menu-icon"></i>
       <nav class="navbar">
@@ -39,7 +39,7 @@
         <h3>And I'am a <span>Data Scientist, AI/ML Engineer</span></h3>
         <div class="social-media">
           <a href="https://www.facebook.com/minh.trinhngoc.965" target="_blank"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/trinhminh_2309" target="_blank"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/minhtrinh.ds/" target="_blank"><i class="bx bxl-instagram"></i></a>
           <a href="https://github.com/trinhminhds" target="_blank"><i class="bx bxl-github"></i></a>
           <a href="https://www.linkedin.com/in/minh-trinh-1007b3273" target="_blank"
             ><i class="bx bxl-linkedin-square"></i
@@ -59,19 +59,12 @@
         <h2 class="heading">About <span>Me</span></h2>
         <!-- <h3>Data Scientist</h3> -->
         <p>
-          Experienced Data Scientist, contributing to the development of data-driven solutions at XYZ Corp, specializing
-          in predictive analytics and data visualization. I focus on crafting clean and efficient code for various
-          components of the data analysis pipeline, particularly in data wrangling and feature engineering. Also
-          evaluating model performance using key metrics like accuracy and precision, ensuring optimal computational
-          efficiency. Instrumental in integrating machine learning models into production systems, emphasizing seamless
-          deployment and scalability while optimizing for inference speed and memory efficiency. Recognized for
-          identifying and addressing performance bottlenecks, enhancing system speed and resource utilization. Previous
-          achievements include leading the development of a predictive maintenance model at ABC Inc., resulting in a
-          significant reduction in downtime. Additionally, contributed to the creation of a data visualization tool for
-          real-time analytics, and developed a recommendation system using collaborative filtering techniques.
-          Proficient in data analysis frameworks, machine learning algorithms, clean code writing, and effective
-          integration and deployment practices, with a strong emphasis on business logic development and software
-          optimization.
+          I am Minh Trinh, a Data Scientist with a strong foundation in artificial intelligence and machine learning,
+          experienced in executing numerous scientific and applied projects in both academic and real-world
+          environments. I have completed diverse projects ranging from facial recognition and image classification to
+          grade prediction. With in-depth knowledge of Python, TensorFlow, and model deployment, I am eager to
+          contribute to innovative AI projects, develop large-scale data systems, and support businesses in making
+          data-driven decisions accurately.
           <br />
           <br />
           Holds a Bachelor's degree in Big Data and proficient in Python, R, C++, SQL, Pandas, and various data analysis
@@ -99,6 +92,7 @@
             </div>
           </div>
         </div>
+
         <!--============================== Education column expecrience ==============================-->
         <div class="education-column">
           <h3 class="title">Expecrience</h3>
@@ -234,7 +228,7 @@
           </div>
         </div>
 
-        <div class="portfolio-box">
+        <!-- <div class="portfolio-box">
           <img src="assets/Image/portfolio4.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Data Scientist</h4>
@@ -259,7 +253,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
