update cv and certificates

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             ><i class="bx bxl-linkedin-square"></i
           ></a>
         </div>
-        <a href="assets/MinhTrinh_Resume.pdf" target="_blank" class="btn">Download CV</a>
+        <a href="assets/MinhTrinh_Resume_AI_Engineer_Intern.pdf" target="_blank" class="btn">Download CV</a>
       </div>
       <div class="home-img"><img src="assets/Image/CaNhan.jpg" alt="" /></div>
     </section>
@@ -276,6 +276,10 @@
         <br />
         <a href="https://www.coursera.org/account/accomplishments/verify/DTA2YVIVGW4X" target="_blank"
           >Calculus for Machine Learning and Data Science</a
+        >
+        <br />
+        <a href="https://www.coursera.org/account/accomplishments/verify/UAFBDAMA56LY" target="_blank"
+          >Probability & Statistics for Machine Learning & Data Science</a
         >
       </div>
     </section>
