--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="skills-box">
             <div class="skills-content">
               <div class="progress">
-                <h3>Tensorflow <span>40%</span></h3>
+                <h3>Tensorflow <span>60%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
@@ -228,25 +228,34 @@
           </div>
         </div>
 
-        <!-- <div class="portfolio-box">
+        <div class="portfolio-box">
           <img src="assets/Image/portfolio4.jpg" alt="" />
           <div class="portfolio-layer">
-            <h4>Data Scientist</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <h4>Building AI Resume App</h4>
+            <p>
+              AI Resume Analyzer is a web application that analyzes resumes and provides insights, skill
+              recommendations, and course suggestions to improve job prospects. The application is built using
+              Streamlit, PyResparser, and MySQL for data storage..
+            </p>
+            <a href="https://github.com/trinhminhds/Building_AI_Resume_App"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
           <img src="assets/Image/portfolio5.jpg" alt="" />
           <div class="portfolio-layer">
-            <h4>Data Scientist</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <h4>Extracting Structured Data From PDFs</h4>
+            <p>
+              This lecture presents a step-by-step guide to building a Python AI project for extracting structured data
+              from PDFs, using OpenAI’s large language models (LLMs), LangChain, ChromaDB, and Docker..
+            </p>
+            <a href="https://github.com/trinhminhds/Extracting-Structured-Data-From-PDFs"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
 
-        <div class="portfolio-box">
+        <!--<div class="portfolio-box">
           <img src="assets/Image/portfolio6.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Data Scientist</h4>
@@ -259,9 +268,6 @@
 
     <!-- Certificates section design -->
     <section class="certificates" id="certificates">
-      <!-- <div class="about-img">
-        <img src="assets/Image/CaNhan.jpg" alt="" />
-      </div> -->
       <h2 class="heading">Certificates</h2>
       <div class="certificates-content">
         <a
@@ -271,15 +277,15 @@
         >
         <br />
         <a href="https://www.coursera.org/account/accomplishments/verify/2I8ZZ5NV7OTM" target="_blank"
-          >Linear Algebra for Machine Learning and Data Science</a
+          >Coursera-Linear Algebra for Machine Learning and Data Science</a
         >
         <br />
         <a href="https://www.coursera.org/account/accomplishments/verify/DTA2YVIVGW4X" target="_blank"
-          >Calculus for Machine Learning and Data Science</a
+          >Coursera-Calculus for Machine Learning and Data Science</a
         >
         <br />
         <a href="https://www.coursera.org/account/accomplishments/verify/UAFBDAMA56LY" target="_blank"
-          >Probability & Statistics for Machine Learning & Data Science</a
+          >Coursera-Probability & Statistics for Machine Learning & Data Science</a
         >
       </div>
     </section>
