--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             ><i class="bx bxl-linkedin-square"></i
           ></a>
         </div>
-        <a href="assets/MinhTrinh_Resume_AI_Engineer_Intern.pdf" target="_blank" class="btn">Download CV</a>
+        <a href="assets\MinhTrinh_Resume_AI_Engineer_Intern.pdf" target="_blank" class="btn">Download CV</a>
       </div>
       <div class="home-img"><img src="assets/Image/CaNhan.jpg" alt="" /></div>
     </section>
