update index file

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
-        <a href="#education">Education</a>
+        <a href="#education">Edu&Exp</a>
         <a href="#skills">Skills</a>
         <a href="#portfolio">Projects</a>
         <a href="#certificates">Certificates</a>
@@ -77,7 +77,7 @@
 
     <!------------------------------------ Education section design ------------------------------------>
     <section class="education" id="education">
-      <h2 class="heading">Education</h2>
+      <h2 class="heading">Education & Experience</h2>
       <div class="education-row">
         <div class="education-column">
           <h3 class="title">Education</h3>
@@ -100,19 +100,38 @@
             <div class="education-content">
               <div class="content">
                 <div class="year"><i class="bx bx-calendar"></i>Mar 2023 - Mar 2024</div>
-                <h3>Python coding Tutor, Freelance</h3>
+                <h3>Python coding Tutor - Freelance</h3>
                 <p>
                   • Guide students of varying skill levels through core Python programming concepts, including data
                   structures, functions, and object-oriented programming, tailoring instruction to individual learning
                   styles.
                   <br />
-                  • Designanddeliver customized lesson plans, hands-on programming exercises, and data science and data
-                  analytics projects to help students develop problem-solving skills and reinforce fundamental
+                  • Design and deliver customized lesson plans, hands-on programming exercises, and data science and
+                  data analytics projects to help students develop problem-solving skills and reinforce fundamental
                   programming knowledge.
                   <br />
                   • Provide real-world examples and project-based learning, covering topics such as data analysis, web
                   scraping, and machine learning fundamentals, to ensure a comprehensive understanding of Python
                   applications.
+                </p>
+              </div>
+              <div class="content">
+                <div class="year"><i class="bx bx-calendar"></i>Apr - Jul 2025</div>
+                <h3>Data Analysis Intern - Vietstats</h3>
+                <p>
+                  • Collected, processed, and analyzed statistical data from public sources (GSO, yearbooks, census
+                  reports).
+                  <br />
+                  • Visualized and explored datasets using Python (Pandas, Seaborn, Requests, BeautifulSoup, Selenium)
+                  and Excel to support research insights.
+                  <br />
+                  • Built descriptive and regression models experimented with machine learning algorithms such as KMeans
+                  and Decision Trees for deeper analysis.
+                  <br />
+                  • Supported dashboard development with Power BI and helped optimize the data standardization workflow.
+                  <br />
+                  • Worked closely with a senior statistician, gaining hands-on experience in data pipelines and
+                  policy-driven data analysis.
                 </p>
               </div>
             </div>
