--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <!------------------------------------ Education section design ------------------------------------>
     <section class="education" id="education">
-      <h2 class="heading">Education & Experience</h2>
+      <h2 class="heading">Education & <span>Experience</span></h2>
       <div class="education-row">
         <div class="education-column">
           <h3 class="title">Education</h3>
