--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <div class="skills-box">
             <div class="skills-content">
               <div class="progress">
-                <h3>Tensorflow <span>60%</span></h3>
+                <h3>Tensorflow <span>80%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
 
@@ -192,6 +192,16 @@
 
               <div class="progress">
                 <h3>Numpy <span>60%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+
+              <div class="progress">
+                <h3>Matplotlib <span>70%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+
+              <div class="progress">
+                <h3>PyTorch <span>70%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
             </div>
